Fixes mobile nav layout bug

--- a/resources/assets/less/navigation.less
+++ b/resources/assets/less/navigation.less
@@ -35,7 +35,7 @@
         background-repeat: no-repeat;
         border-left: none;
     }
-    .etpM:hover {
+    .etpM-branding:hover {
         width: 155px;
     }
     .mobile.only.row {
